tests/golden/invalid/unknown-var-04.rego
package fregot.tests.invalid.unkown_var_04

test_double {
  double(1, 2)
}
